# Hospital-Management-System

./: .env.example  .gitignore  CLAUDE.md  README.md  auth.py  database.py  generate_key.bat  generate_key.py  hospital.db  main.py  models.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: secrets.toml
