[project]
name = "hospitalmanagementsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "cryptography>=41.0.0",
    "cryptography-fernet>=0.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
]
